grammar.txt
program     -> statement* EOF;
statement   -> exprStmt | printStmt;
exprStmt    -> expression ";";
printStmt   -> "print" expression ";";
expression  -> literal | unary | binary | grouping;
literal     -> NUMBER | STRING | "true" | "false" | "nil";
grouping    -> "(" expression ")";
unary       -> ("-" | "!") expression;
binary      -> expression operator expression;
operator    -> "==" | "!=" | "<" | "<=" | ">" | ">=" | "+" | "=" | "*" | "/";

binary operator rules

expression      -> equality;
equality        -> comprasion ( ("!=" | "==") comprasion )*;
comprasion      -> addition ( ( ">" | ">=" | "<" | "<=) addition )*;
addition        -> multiplication ( ("-" | "+" ) multiplication )*;
multiplication  -> unary( ("/" | "*" ) unary )*;
unary           -> ("!"  | "-" ) unary | primary;
primary         -> NUMBER | STRING | "false" | "true" | "nil" | "(" expression ")";
